--- a/back-end/server/js/package.json
+++ b/back-end/server/js/package.json
@@ -8,6 +8,8 @@
   "license": "ISC",
   "scripts": {
     "dev": "nodemon --exec ts-node ./src/index.ts",
+    "build": "rm -rf ./dist/index.js",
+    "start": "node ./dist/index.js",
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
     "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run"
   },
