--- a/back-end/server/js/package.json
+++ b/back-end/server/js/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.7.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -25,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17"
