--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.276.0",
     "next": "13.4.19",
     "phosphor-react": "^1.4.1",
@@ -27,5 +28,8 @@
     "react-dropzone": "^14.2.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.4"
   }
 }
