--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,16 +14,18 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.276.0",
-    "next": "13.4.19",
+    "next": "^13.5.6",
     "phosphor-react": "^1.4.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "tailwindcss": "3.3.3",
