--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "@types/node": "20.6.0",
@@ -21,7 +23,6 @@
     "eslint-config-next": "13.4.19",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.276.0",
-    "next": "^13.5.6",
     "phosphor-react": "^1.4.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -32,6 +33,17 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.4"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.7",
+    "@types/js-cookie": "^3.0.4",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-testing-library": "^6.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "next": "^14.0.1",
+    "next-router-mock": "^0.9.10",
+    "ts-jest": "^29.1.1"
   }
 }
